# talon

./: .gitignore  PLAN.md  README.md  SPEC.md  TODO.md  client.toml.example  pyproject.toml
chatthy/server/: interface.hy
talon/: TODO.md  __init__.py  __main__.py  cli.hy  openclaw.hy  ptk_app.hy  repl.hy  state.hy
talon/client/: openclaw.hy  ptk_app.hy  repl.hy  state.hy
tests/: conftest.py
tests/native_tests/: __init__.py  test_cli.hy  test_openclaw.hy  test_ptk_app.hy  test_repl.hy  test_state.hy
